--- a/easy_examples.ipynb
+++ b/easy_examples.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## String manipulation"
+    "## String manipulation\n"
    ]
   },
   {
